# newest

./: .gitignore  AUTHORS  Doxyfile  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure.scan  libtool  newest.kdevelop  newest.kdevelop.pcs  newest.kdevses
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
debug/: Makefile  config.h  config.status  libtool
debug/src/: Makefile  newest  newest.c
debug/src/.deps/: newest.Po
lib/: Makefile  Makefile.am  Makefile.in  dummy.lo  libgnu.la  stdlib.h  string.h  unistd.h
m4/: gnulib-cache.m4  gnulib-comp.m4
src/: Makefile  Makefile.am  Makefile.in  newest  newest.c
src/.deps/: newest.Po
templates/: c
